force-app/main/default/objects/Platform_Event_Test__c/Platform_Event_Test__c.object-meta.xml
<CustomObject>
    <label>Platform Event Test</label>
    <nameField>
        <label>Platform Event Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Platform Event Test</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>