force-app/main/default/objects/Platform_Event_Test__c/fields/Custom_Prompt_Command__c.field-meta.xml
<CustomField>
    <fullName>Custom_Prompt_Command__c</fullName>
    <label>Custom Prompt Command</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>