force-app/main/default/objects/Platform_Event_Test__c/fields/Event_UUID__c.field-meta.xml
<CustomField>
    <fullName>Event_UUID__c</fullName>
    <label>Event UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>