force-app/main/default/objects/Platform_Event_Test__c/fields/Replay_Id__c.field-meta.xml
<CustomField>
    <fullName>Replay_Id__c</fullName>
    <label>Replay Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>